...
            "state" : "new",
            "value" : "Coach: %1$@ %2$@, tap to view details"
          }
        }
      }
    },
    "Coaches" : {
      "comment" : "The title of the Coaches screen.",
      "isCommentAutoGenerated" : true
    },
    "Coaches are added through school pages. Add a school to start tracking coaches there." : {
      "comment" : "A description of the action to take to add a school.",
      "isCommentAutoGenerated" : true
...
      "comment" : "Display name for the D3 division.",
      "isCommentAutoGenerated" : true
    },
    "Daily Digest" : {

    },
    "Dashboard" : {

    },
    "Dashboard Customization" : {

    },
    "Dashboard Widgets" : {
...
      "isCommentAutoGenerated" : true
    },
    "Discus" : {
      "comment" : "Display name of the `discus` metric.",
      "isCommentAutoGenerated" : true
    },
    "Dismiss" : {

    },
    "Dismiss data point details" : {
      "comment" : "A button that dismisses the details of a data point.",
      "isCommentAutoGenerated" : true
    },
...
    "Log in and connect" : {

    },
    "Log in to connect your account." : {

    },
    "Log Interaction" : {

    },
    "Log Interactions" : {

    },
    "Log it from Interactions once sent." : {
...
      "comment" : "Name of the weekday starting with Sunday.",
      "isCommentAutoGenerated" : true
    },
    "Monitor Progress" : {

    },
    "More" : {

    },
    "Most athletes see serious recruiting activity start in junior year. If your athlete hasn't heard from coaches yet, they're right on schedule. This is completely normal." : {
      "comment" : "Assurance message for juniors on the timing of recruiting.",
      "isCommentAutoGenerated" : true
    },
...
      "comment" : "A label that describes the view when there is not enough data to display the chart.",
      "isCommentAutoGenerated" : true
    },
    "Not favorited" : {

    },
    "Not Now" : {
      "comment" : "A button that dismisses a pending biometric enrollment offer.",
      "isCommentAutoGenerated" : true
    },
    "Not pursuing" : {
      "comment" : "A label for the \"Not pursuing\" section of the school",
      "isCommentAutoGenerated" : true
...
      "comment" : "Category of a task.",
      "isCommentAutoGenerated" : true
    },
    "Recruiting Approach" : {

    },
    "Recruiting Calendar" : {

    },
    "Recruiting Compass is for ages 13 and up. By entering a date of birth, you confirm the player is 13 or older." : {
      "comment" : "A description of the age requirement for using Recruiting Compass.",
      "isCommentAutoGenerated" : true
    },
...

    },
    "Sign In Required" : {
      "comment" : "A view that displays a message and a system icon.",
      "isCommentAutoGenerated" : true
    },
    "Sign in to account" : {

    },
    "Sign in to existing account" : {

    },
    "Sign in to your account" : {
      "comment" : "A hint for the user to enter their email and password when signing in.",
      "isCommentAutoGenerated" : true
    },
    "Sign in with Face ID" : {
      "comment" : "A title for the biometric lock screen.",
      "isCommentAutoGenerated" : true
...
